# sdl_simple

./: .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  FindSDL2.cmake  README.md  config.h.cmake
src/: .clang_complete
src/main/: CMakeLists.txt  main.cpp
src/objects/: CMakeLists.txt  config.h.cmake
src/objects/include/: config.h  dog.hpp
src/objects/sources/: dog.cpp
src/objects/test/: boost_test_draw.cpp
src/sdl_model/: CMakeLists.txt
src/sdl_model/include/: dog.hpp  sdl_model.hpp  sdl_object.hpp  texture_manager.hpp
src/sdl_model/sources/: dog.cpp  sdl_model.cpp  sdl_object.cpp  texture_manager.cpp
src/sdl_model/test/: boost_test_model.cpp  boost_test_obj.cpp
src/sdl_view/: CMakeLists.txt
src/sdl_view/include/: sdl_view.hpp
src/sdl_view/sources/: sdl_view.cpp
src/sdl_view/test/: boost_test_view.cpp
